additional CSS - h1 margin 0

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 <body>
   <main>
     <div id="status">ONLINE</div>
-    <img src="https://picsum.photos/125" alt="placeholder avatar">
+    <img id="photo" src="https://picsum.photos/125" alt="placeholder avatar">
     <h1 id="name">John Shoshone</h1>
     <section id="occupation">
-      <p>🌟🌟🌟🌟⭐</p>
-      <p>Psychic Healer</p>
+      <p>🌟🌟🌟🌟⭐<br>Psychic Healer</p>
     </section>
     <section id="brand">
       <p>Depression, Life Coaching, Mental & Emotional Health, Stress & Anger Management</p>
