--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
   <main>
     <div id="status">ONLINE</div>
-    <img id="photo" src="https://picsum.photos/125" alt="placeholder avatar">
+    <div id="photo">
+    <img src="https://picsum.photos/125" alt="placeholder avatar"></div>
     <h1 id="name">John Shoshone</h1>
     <section id="occupation">
-      <p>🌟🌟🌟🌟⭐<br>Psychic Healer</p>
+      <p>🌟🌟🌟🌟🌑<br>Psychic Healer</p>
     </section>
     <section id="brand">
       <p>Depression, Life Coaching, Mental & Emotional Health, Stress & Anger Management</p>
