--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="status">ONLINE</div>
     <div id="photo">
     <img src="https://picsum.photos/125" alt="placeholder avatar"></div>
-    <h1 id="name">John Shoshone</h1>
+    <h1 id="name">John Shoshone<br></h1>
     <section id="occupation">
       <p>🌟🌟🌟🌟🌑<br>Psychic Healer</p>
     </section>
