add green variation to contact

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="status">ONLINE</div>
     <div id="photo">
     <img src="https://picsum.photos/125" alt="placeholder avatar"></div>
-    <h1 id="name">John Shoshone<br></h1>
+    <h1 id="name">John Shoshone</h1>
     <section id="occupation">
-      <p>🌟🌟🌟🌟🌑<br>Psychic Healer</p>
+      <p>★★★★✩<br>Psychic Healer</p>
     </section>
     <section id="brand">
       <p>Depression, Life Coaching, Mental & Emotional Health, Stress & Anger Management</p>
@@ -28,3 +28,4 @@
   </main>
 </body>
 </html>
+
